cmake_minimum_required (VERSION 3.5)
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_CXX_FLAGS_DEBUG "-DDEBUG -g")
set(CMAKE_CXX_FLAGS "-Wno-deprecated")
set(CMAKE_CXX_FLAGS "-Wno-deprecated-declarations")
set(CMAKE_CXX_FLAGS "-pthread")

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../vendor/s2geometry ${CMAKE_CURRENT_SOURCE_DIR}/../vendor/s2geometry EXCLUDE_FROM_ALL)

include_directories(../vendor/libosmium/include)
include_directories(../vendor/protozero/include)
include_directories(../vendor/CRoaring/cpp)
include_directories(../vendor/CRoaring/include)
include_directories(../vendor/cxxopts/include)
include_directories(/usr/local/include)
include_directories(../depends)
include_directories(../include)
include_directories(../vendor/lmdb/libraries/liblmdb)
include_directories(../vendor/capnproto/c++/src)
link_directories(/usr/local/lib)
link_directories(../vendor/CRoaring)
link_directories(../vendor/capnproto)
link_directories(../vendor/lmdb/libraries/liblmdb/)
link_directories(../vendor/capnproto/c++/src/capnp/)
link_directories(../vendor/capnproto/c++/src/kj/)
link_directories(../vendor/CRoaring/src/)

add_executable(way_wkt way_wkt.cpp ../src/storage.cpp)
target_link_libraries(way_wkt lmdb z expat bz2 s2 capnp kj roaring)
set_property(TARGET way_wkt PROPERTY CXX_STANDARD 14)

add_executable(bbox_wkt bbox_wkt.cpp ../src/storage.cpp)
target_link_libraries(bbox_wkt lmdb z expat bz2 s2 capnp kj roaring)
set_property(TARGET bbox_wkt PROPERTY CXX_STANDARD 14)
